# fast-api-setup

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  config.py  mypy.ini  pyproject.toml
fast_app/: lifespan.py  main.py  run.py
fast_app/commands/: create_cms.py  create_form_module.py  create_module.py
fast_app/core/: router_context.py  ws_manager.py
fast_app/db/: models.py  mongodb.py
fast_app/decorators/: authenticator.py  catch_error.py  form_decorator.py  permission_decorator.py
fast_app/defaults/: chat_enums.py  common_enums.py  enums.py  notification_enums.py  permission_enums.py  user_enums.py
fast_app/middlewares/: exception_handler.py
fast_app/modules/: __init__.py
fast_app/modules/category/: __init__.py
fast_app/modules/category/models/: category_model.py
fast_app/modules/category/routes/: category_api.py
fast_app/modules/category/schemas/: category_schema.py
fast_app/modules/category/services/: category_service.py
fast_app/modules/chat/: __init__.py
fast_app/modules/chat/models/: block_model.py  message_model.py  report_model.py  room_model.py
fast_app/modules/chat/routes/: chat_api.py  chat_ws.py
fast_app/modules/chat/schemas/: chat_schema.py
fast_app/modules/chat/services/: chat_service.py
fast_app/modules/cms/: __init__.py
fast_app/modules/cms/models/: buyer_cms_model.py  common_cms_model.py  seller_cms_model.py
fast_app/modules/cms/routes/: buyer_cms_api.py  manage_buyer_cms_api.py  manage_seller_cms_api.py  seller_cms_api.py
fast_app/modules/cms/schemas/: banner_cms_schema.py  buyer_cms_schema.py  seller_cms_schema.py
fast_app/modules/cms/services/: buyer_cms_service.py  seller_cms_service.py
fast_app/modules/common/models/: base_model.py  geo_location_model.py
fast_app/modules/contact_us/: __init__.py
fast_app/modules/dashboard/: __init__.py
fast_app/modules/demo/: __init__.py
fast_app/modules/democms/: __init__.py
fast_app/modules/demoform/: __init__.py
fast_app/modules/file/: __init__.py  routes.py  schemas.py
fast_app/modules/notification/: __init__.py
fast_app/modules/privacy_policy/: __init__.py
fast_app/modules/product/: __init__.py
fast_app/modules/resource/: __init__.py
fast_app/modules/terms_and_condition/: __init__.py
fast_app/modules/user/: __init__.py
fast_app/static/css/: bootstrap.min.css  style.css
fast_app/static/js/: script.js
fast_app/utils/: auth_utils.py  common_utils.py  crypto_utils.py  email_utils.py  file_utils.py  firebase_utils.py  jwt_utils.py  logger.py  otp_utils.py  register_routes.py  swagger.py
(+75 files in other folders)
